@@ -633,6 +633,12 @@ def bouncegen(mode, text=None):
                                                              timestamp,
                                                              pid,
                                                              'accept')
+        if Defaults.CGI_URL:
+            # e.g, http://www.domain.tld/tmda.cgi?684.1038959858.48460.c7a2e8
+            confirm_accept_url = '%s?%s.%s' %(Defaults.CGI_URL, os.geteuid(),
+                                              Cookie.make_confirm_cookie(timestamp,
+                                                                         pid,
+                                                                         'accept'))
         pending_message = create_pending_msg(timestamp, pid)
     elif mode == 'hold':
         pending_message = create_pending_msg(str('%d' % now), Defaults.PID)
