@@ -1,174 +1,169 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
+<HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Thu Dec  5 12:07:14 2002 -->
-<!-- USING HT2HTML 2.0 -->
-<!-- SEE http://ht2html.sf.net -->
+<!-- Fri Dec  6 16:41:04 2002 -->
+<!-- USING HT2HTML 1.2 -->
+<!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
 Title: TMDA Configuration Variables
 
 -->
 
-<head>
-<title>TMDA Configuration Variables</title>
-<meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
-<meta name="generator" content="HT2HTML/2.0">
-<style type="text/css">
-body { margin: 0px; }
-</style>
-</head>
-<body bgcolor="#ffffff" text="#000000"
-      marginwidth="0" marginheight="0"
-      link="#0000bb"  vlink="#551a8b"
-      alink="#ff0000">
+<HEAD>
+<TITLE>TMDA Configuration Variables</TITLE>
+
+</HEAD>
+<BODY BGCOLOR="#ffffff" TEXT="#000000"
+      TOPMARGIN="0" LEFTMARGIN="0" MARGINWIDTH="0" MARGINHEIGHT="0"
+      LINK="#0000bb"  VLINK="#551a8b"
+      ALINK="#ff0000">
 <!-- start of page table -->
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
+<TABLE WIDTH="100%" BORDER=0 CELLSPACING=0 CELLPADDING=0>
 <!-- start of banner row -->
-<tr>
+<TR>
 <!-- start of corner cells -->
-<td width="150" valign="middle" bgcolor="#afeeee" class="corner">
+<TD WIDTH=150 VALIGN=CENTER BGCOLOR="#afeeee">
 <center><font size="+2"
-        >&gt;&gt;&gt;&nbsp;TMDA&nbsp</font></center> </td>
-<td width="15" bgcolor="#cccccc">&nbsp;&nbsp;</td><!--spacer-->
+        >&gt;&gt;&gt;&nbsp;TMDA&nbsp</font></center> </TD>
+<TD WIDTH=15 BGCOLOR="#cccccc">&nbsp;&nbsp;</TD><!--spacer-->
 <!-- end of corner cells -->
 <!-- start of banner -->
-<td width="90%" bgcolor="#cccccc" class="banner">
+<TD WIDTH="90%" BGCOLOR="#cccccc">
 <!-- start of site links table -->
-<table width="100%" border="0"
+<TABLE WIDTH="100%" BORDER=0
 CELLSPACING=0 CELLPADDING=0
-       bgcolor="#ffffff">
-<tr>
-    <td bgcolor="#cccccc">
+       COLS=4 ROWS=1 BGCOLOR="#ffffff">
+<TR>
+    <TD BGCOLOR="#cccccc">
 <a href="./index.html">TMDA Homepage</a>
-    </td>
-    <td bgcolor="#cccccc">
+    </TD>
+    <TD BGCOLOR="#cccccc">
 <a href="http://sourceforge.net/projects/tmda">TMDA @ SourceForge</a>
-    </td>
-    <td bgcolor="#cccccc">
-&nbsp;&nbsp;</td>
-    <td bgcolor="#cccccc">
-&nbsp;&nbsp;</td>
-</tr>
-</table><!-- end of site links table -->
+    </TD>
+    <TD BGCOLOR="#cccccc">
+&nbsp;&nbsp;</TD>
+    <TD BGCOLOR="#cccccc">
+&nbsp;&nbsp;</TD>
+</TR>
+</TABLE><!-- end of site links table -->
 
-</td><!-- end of banner -->
-</tr><!-- end of banner row -->
-<tr><!-- start of sidebar/body row -->
+</TD><!-- end of banner -->
+</TR><!-- end of banner row -->
+<TR><!-- start of sidebar/body row -->
 <!-- start of sidebar cells -->
-<td width="150" valign="top" bgcolor="#cccccc" class="sidebar">
+<TD WIDTH=150 VALIGN=TOP BGCOLOR="#cccccc">
 <!-- start of sidebar table -->
-<table width="100%" border="0" cellspacing="0" cellpadding="3"
-       bgcolor="#ffffff">
-<tr><td bgcolor="#191970"><b><font color="#ffffff">
+<TABLE WIDTH="100%" BORDER=0 CELLSPACING=0 CELLPADDING=3
+       BGCOLOR="#ffffff">
+<TR><TD BGCOLOR="#191970"><B><FONT COLOR="#ffffff">
 Overview
-</font></b></td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="index.html">Introduction</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="history.html">History</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="features.html">Features</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="results.html">Results &amp; Testimonials</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="inuse.html">TMDA In Use</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="press.html">Press Coverage</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">&nbsp;
-<tr><td bgcolor="#191970"><b><font color="#ffffff">
+</FONT></B></TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="index.html">Introduction</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="history.html">History</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="features.html">Features</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="results.html">Results &amp; Testimonials</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="inuse.html">TMDA In Use</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="press.html">Press Coverage</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">&nbsp;
+<TR><TD BGCOLOR="#191970"><B><FONT COLOR="#ffffff">
 Usage
-</font></b></td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="requirements.html">Requirements</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="download.html">Download</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="install.html">Installation</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="config.html">Configuration</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="howtos.html">HOWTOs</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">&nbsp;
-<tr><td bgcolor="#191970"><b><font color="#ffffff">
+</FONT></B></TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="requirements.html">Requirements</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="download.html">Download</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="install.html">Installation</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="config.html">Configuration</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="howtos.html">HOWTOs</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">&nbsp;
+<TR><TD BGCOLOR="#191970"><B><FONT COLOR="#ffffff">
 Configuration
-</font></b></td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="config.html">Overview</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="config-pre.html">Pre-Configuration</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="config-server.html">Server Configuration</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="config-client.html">Client Configuration</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
+</FONT></B></TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="config.html">Overview</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="config-pre.html">Pre-Configuration</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="config-server.html">Server Configuration</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="config-client.html">Client Configuration</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
 <b>Configuration Variables</b>
-</td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="config-filter.html">Filter Specification</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="filter-sources.html">Filter Sources</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">&nbsp;
-<tr><td bgcolor="#191970"><b><font color="#ffffff">
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="config-filter.html">Filter Specification</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="filter-sources.html">Filter Sources</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">&nbsp;
+<TR><TD BGCOLOR="#191970"><B><FONT COLOR="#ffffff">
 Support
-</font></b></td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="trouble.html">Troubleshooting</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
+</FONT></B></TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="trouble.html">Troubleshooting</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
 <a href="http://tmda.net/faq.cgi" TARGET="Resource Window">FAQ</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="bugs.html">Bugs &amp; Patches</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="bugs.html">Bugs &amp; Patches</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
 <a href="http://tmda.net/lists/listinfo/" TARGET="Resource Window">Mailing Lists</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
 <a href="http://mla.libertine.org/" TARGET="Resource Window">List Archive</a> 
-</td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="support-commercial.html">Commercial Support</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="resources.html">External Resources</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">&nbsp;
-<tr><td bgcolor="#191970"><b><font color="#ffffff">
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="support-commercial.html">Commercial Support</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="resources.html">External Resources</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">&nbsp;
+<TR><TD BGCOLOR="#191970"><B><FONT COLOR="#ffffff">
 Author
-</font></b></td></tr>
-<tr><td bgcolor="#cccccc">
-<a href="mailto:jason@mastaler.com">Jason R. Mastaler</a>
-</td></tr>
-<tr><td bgcolor="#cccccc">
+</FONT></B></TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="mailto:jason@mastaler.com">Jason R. Mastaler</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
 &nbsp;
-</td></tr>
-<tr><td bgcolor="#cccccc">
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
 &copy; 2001-2002
-</td></tr>
-</table><!-- end of sidebar table -->
+</TD></TR>
+</TABLE><!-- end of sidebar table -->
 
-</td>
-<td width="15">&nbsp;&nbsp;</td><!--spacer-->
+</TD>
+<TD WIDTH=15>&nbsp;&nbsp;</TD><!--spacer-->
 <!-- end of sidebar cell -->
 <!-- start of body cell -->
-<td valign="top" width="90%" class="body"><br>
+<TD VALIGN=TOP WIDTH="90%"><BR>
 <h3>TMDA Configuration Variables</h3>
 
 <ul>
@@ -242,141 +237,143 @@ Each variable definition below contains one or more examples.
 <td><a href="#CGI_SESSION_EXP">CGI_SESSION_EXP</a></td>
 </tr>
 <tr>
+<td><a href="#CGI_URL">CGI_URL</a></td>
 <td><a href="#CGI_USER">CGI_USER</a></td>
+</tr>
+<tr>
 <td><a href="#CGI_USE_JS_CONFIRM">CGI_USE_JS_CONFIRM</a></td>
-</tr>
-<tr>
 <td><a href="#CONFIG_EXEC">CONFIG_EXEC</a></td>
+</tr>
+<tr>
 <td><a href="#CONFIRM_ACCEPT_CC">CONFIRM_ACCEPT_CC</a></td>
-</tr>
-<tr>
 <td><a href="#CONFIRM_ACCEPT_NOTIFY">CONFIRM_ACCEPT_NOTIFY</a></td>
+</tr>
+<tr>
 <td><a href="#CONFIRM_ACCEPT_TEXT_ALREADY_CONFIRMED">CONFIRM_ACCEPT_TEXT_ALREADY_CONFIRMED</a></td>
-</tr>
-<tr>
 <td><a href="#CONFIRM_ACCEPT_TEXT_ALREADY_RELEASED">CONFIRM_ACCEPT_TEXT_ALREADY_RELEASED</a></td>
+</tr>
+<tr>
 <td><a href="#CONFIRM_ACCEPT_TEXT_INITIAL">CONFIRM_ACCEPT_TEXT_INITIAL</a></td>
-</tr>
-<tr>
 <td><a href="#CONFIRM_ADDRESS">CONFIRM_ADDRESS</a></td>
+</tr>
+<tr>
 <td><a href="#CONFIRM_APPEND">CONFIRM_APPEND</a></td>
-</tr>
-<tr>
 <td><a href="#CONFIRM_CC">CONFIRM_CC</a></td>
+</tr>
+<tr>
 <td><a href="#CONFIRM_MAX_MESSAGE_SIZE">CONFIRM_MAX_MESSAGE_SIZE</a></td>
-</tr>
-<tr>
 <td><a href="#CRYPT_KEY_FILE">CRYPT_KEY_FILE</a></td>
+</tr>
+<tr>
 <td><a href="#DATADIR">DATADIR</a></td>
-</tr>
-<tr>
 <td><a href="#DATED_TEMPLATE_VARS">DATED_TEMPLATE_VARS</a></td>
+</tr>
+<tr>
 <td><a href="#DELIVERY">DELIVERY</a></td>
-</tr>
-<tr>
 <td><a href="#FILTER_BOUNCE_CC">FILTER_BOUNCE_CC</a></td>
+</tr>
+<tr>
 <td><a href="#FILTER_DROP_CC">FILTER_DROP_CC</a></td>
-</tr>
-<tr>
 <td><a href="#FILTER_INCOMING">FILTER_INCOMING</a></td>
+</tr>
+<tr>
 <td><a href="#FILTER_OUTGOING">FILTER_OUTGOING</a></td>
-</tr>
-<tr>
 <td><a href="#FINGERPRINT">FINGERPRINT</a></td>
+</tr>
+<tr>
 <td><a href="#FULLNAME">FULLNAME</a></td>
-</tr>
-<tr>
 <td><a href="#HMAC_BYTES">HMAC_BYTES</a></td>
+</tr>
+<tr>
 <td><a href="#HOSTNAME">HOSTNAME</a></td>
-</tr>
-<tr>
 <td><a href="#LOCALDATE">LOCALDATE</a></td>
+</tr>
+<tr>
 <td><a href="#LOGFILE_DEBUG">LOGFILE_DEBUG</a></td>
-</tr>
-<tr>
 <td><a href="#LOGFILE_INCOMING">LOGFILE_INCOMING</a></td>
+</tr>
+<tr>
 <td><a href="#LOGFILE_OUTGOING">LOGFILE_OUTGOING</a></td>
-</tr>
-<tr>
 <td><a href="#MAIL_TRANSFER_AGENT">MAIL_TRANSFER_AGENT</a></td>
+</tr>
+<tr>
 <td><a href="#MAX_AUTORESPONSES_PER_DAY">MAX_AUTORESPONSES_PER_DAY</a></td>
-</tr>
-<tr>
 <td><a href="#MESSAGE_FROM_STYLE">MESSAGE_FROM_STYLE</a></td>
+</tr>
+<tr>
 <td><a href="#MESSAGE_TAG_HEADER_STYLE">MESSAGE_TAG_HEADER_STYLE</a></td>
-</tr>
-<tr>
 <td><a href="#OUTGOINGMAIL">OUTGOINGMAIL</a></td>
+</tr>
+<tr>
 <td><a href="#PENDING_BLACKLIST_APPEND">PENDING_BLACKLIST_APPEND</a></td>
-</tr>
-<tr>
 <td><a href="#PENDING_CACHE">PENDING_CACHE</a></td>
+</tr>
+<tr>
 <td><a href="#PENDING_CACHE_LEN">PENDING_CACHE_LEN</a></td>
-</tr>
-<tr>
 <td><a href="#PENDING_DELETE_APPEND">PENDING_DELETE_APPEND</a></td>
+</tr>
+<tr>
 <td><a href="#PENDING_RELEASE_APPEND">PENDING_RELEASE_APPEND</a></td>
-</tr>
-<tr>
 <td><a href="#PENDING_WHITELIST_APPEND">PENDING_WHITELIST_APPEND</a></td>
+</tr>
+<tr>
 <td><a href="#PRIMARY_ADDRESS_MATCH">PRIMARY_ADDRESS_MATCH</a></td>
-</tr>
-<tr>
 <td><a href="#PURGED_HEADERS">PURGED_HEADERS</a></td>
+</tr>
+<tr>
 <td><a href="#RECIPIENT_DELIMITER">RECIPIENT_DELIMITER</a></td>
-</tr>
-<tr>
 <td><a href="#RECIPIENT_HEADER">RECIPIENT_HEADER</a></td>
+</tr>
+<tr>
 <td><a href="#RESPONSE_DIR">RESPONSE_DIR</a></td>
-</tr>
-<tr>
 <td><a href="#SENDER_TEMPLATE_VARS">SENDER_TEMPLATE_VARS</a></td>
+</tr>
+<tr>
 <td><a href="#SENDMAIL_PROGRAM">SENDMAIL_PROGRAM</a></td>
-</tr>
-<tr>
 <td><a href="#SMTPAUTH_PASSWORD">SMTPAUTH_PASSWORD</a></td>
+</tr>
+<tr>
 <td><a href="#SMTPAUTH_USERNAME">SMTPAUTH_USERNAME</a></td>
-</tr>
-<tr>
 <td><a href="#SMTPHOST">SMTPHOST</a></td>
+</tr>
+<tr>
 <td><a href="#SMTPSSL">SMTPSSL</a></td>
-</tr>
-<tr>
 <td><a href="#SMTPSSL_CERTFILE">SMTPSSL_CERTFILE</a></td>
+</tr>
+<tr>
 <td><a href="#SMTPSSL_KEYFILE">SMTPSSL_KEYFILE</a></td>
-</tr>
-<tr>
 <td><a href="#SMTP_MAX_SESSIONS_PER_CONNECTION">SMTP_MAX_SESSIONS_PER_CONNECTION</a></td>
+</tr>
+<tr>
 <td><a href="#SUMMARY_HEADERS">SUMMARY_HEADERS</a></td>
-</tr>
-<tr>
 <td><a href="#TAGS_CONFIRM">TAGS_CONFIRM</a></td>
+</tr>
+<tr>
 <td><a href="#TAGS_DATED">TAGS_DATED</a></td>
-</tr>
-<tr>
 <td><a href="#TAGS_KEYWORD">TAGS_KEYWORD</a></td>
+</tr>
+<tr>
 <td><a href="#TAGS_SENDER">TAGS_SENDER</a></td>
-</tr>
-<tr>
 <td><a href="#TEMPLATE_DIR">TEMPLATE_DIR</a></td>
+</tr>
+<tr>
 <td><a href="#TEMPLATE_DIR_MATCH_SENDER">TEMPLATE_DIR_MATCH_SENDER</a></td>
-</tr>
-<tr>
 <td><a href="#TEMPLATE_EMAIL_HEADERS">TEMPLATE_EMAIL_HEADERS</a></td>
+</tr>
+<tr>
 <td><a href="#TEMPLATE_ENCODED_HEADERS">TEMPLATE_ENCODED_HEADERS</a></td>
-</tr>
-<tr>
 <td><a href="#TERSE_SUMMARY_HEADERS">TERSE_SUMMARY_HEADERS</a></td>
+</tr>
+<tr>
 <td><a href="#TIMEOUT">TIMEOUT</a></td>
-</tr>
-<tr>
 <td><a href="#USERNAME">USERNAME</a></td>
-<td><a href="#USEVIRTUALDOMAINS">USEVIRTUALDOMAINS</a></td>
 </tr>
 <tr>
+<td><a href="#USEVIRTUALDOMAINS">USEVIRTUALDOMAINS</a></td>
 <td><a href="#VIRTUALDOMAINS">VIRTUALDOMAINS</a></td>
-<td><a href="#X_TMDA_IN_SUBJECT">X_TMDA_IN_SUBJECT</a></td>
 </tr>
+<tr>
+<td><a href="#X_TMDA_IN_SUBJECT">X_TMDA_IN_SUBJECT</a></td>
 </table>
 
 <dl>
@@ -789,6 +786,16 @@ Example:
 <code>CGI_SESSION_EXP = 600</code>
 <br><br>
 Default is 300 (5 minutes).
+<dt><hr>
+<a name="CGI_URL"><h4>CGI_URL</h4></a>
+<dd>
+Absolute URL of your tmda-cgi installation.
+<br><br>
+Example:
+<br><br>
+<code>CGI_URL = "http://www.domain.dom/cgi-bin/tmda.cgi"</code>
+<br><br>
+No default.
 <dt><hr>
 <a name="CGI_USER"><h4>CGI_USER</h4></a>
 <dd>
@@ -1646,7 +1653,7 @@ Subject: Re: You're fired!
 Default is 0 (turned off)
 </dl>
 
-</td><!-- end of body cell -->
-</tr><!-- end of sidebar/body row -->
-</table><!-- end of page table -->
-</body></html>
+</TD><!-- end of body cell -->
+</TR><!-- end of sidebar/body row -->
+</TABLE><!-- end of page table -->
+</BODY></HTML>
